--- a/playground/assets/styles/main.scss
+++ b/playground/assets/styles/main.scss
@@ -1,10 +1,12 @@
+@import './quasar.variables.scss';
+@import 'quasar/src/css/variables.sass';
 
 .container {
-  // border: 1rem solid $info;
+  border: 1rem solid $primary;
   border-radius: 3px;
   cursor: pointer;
   transition: background 1.5s;
-  height: 150px;
+  // height: 150px;
   width: 80%;
   max-width: 500px;
   font-size: 2rem;
